Revision history for Perl extension Module::Build.

 - Reworked the _detildefy() method so it doesn't depend on glob()
   anymore.  This gets rid of a problem with spaces or other special
   shell characters in things like 'prefix' or 'install_path'
   entries. [Prodding by Eric Wilhelm]

 - Added midnightbsd to the list of Unix-like OSes we know about
   [Rafael Garcia-Suarez]

0.2808 - Sat Apr 28 12:59:43 2007

 - Added is_vmsish(), is_windowsish(), and is_unixish() boolean
   convenience functions.  Fixes some test failures on platforms where
   $^O is set to a value we don't know about (like 'gnu').

 - Upgraded to version.pm 0.7203. [John Peacock]

 - Support get_action_docs() =head2 style. [ewilhelm]

 - Workaround Test::Pod::Coverage @INC bug. [Eric Wilhelm]

 - Fixed the command-line args --extra_compiler_flags and
   --extra_linker_flags so they properly shell-split their arguments.

0.2807 - Sat Mar 24 22:19:02 2007

 - Upgraded to version.pm 0.71. [John Peacock]

 - Removed a couple small constructs in the tests ("use warnings;" and
   "qw$foo bar$[1]") that caused test failures under perl 5.005.

 - Added support for an explicit default value of undef in prompt().
   [Eric Wilhelm]

 - Improved our prompt() method, which could sometimes hang before the
   user got a chance to see a prompt. [Andreas Koenig]

 - Added a note about --allow_mb_mismatch to the error message that
   happens right before someone might want to use that parameter.

 - Added DragonflyBSD to the list of known Unix OSes.

 - get_action_docs() dies on error rather than twiddling $@

 - Made ModuleInfo's _evaluate_version_line() compatible with 'use
   version ...$VERSION' lines.  [Eric Wilhelm]

 - Added some verbiage in Module::Build::API that officially blesses
   the _build/prereqs file for external consumption. [Suggested by Andreas Koenig]

 - Added test profiles support via the test_types property and "testall"
   target. [Eric Wilhelm, Jeff Lavallee]
